# fairshare

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.cfg
alembic/versions/: c74560a96592_initialize_database_schema.py
docs/database/: db_schema_v1.dbml
docs/database/v1/: db_schema.dbml
