[metadata]
name = fairshare
version = attr: fairshare.__version__
author = Siddarth Patil
author_email = info@techwithsid.com
description = TODO
long_description = file: README.md, docs/HISTORY.md

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
package_dir =
    = src
install_requires =
    requests

[options.extras_require]
testing =
    black
    coverage
    flake8
    freezegun
    isort
    pytest
    pytest-cov
    pytest-mock
    pylint
    responses

[options.packages.find]
where = src
exclude =
    tests

[flake8]
max-line-length = 88
extend-ignore = E203
